// PosterPatchTableViewCell.swift
// Copyright © Boris Zverik. All rights reserved.

import UIKit

final class PosterPatchTableViewCell: UITableViewCell {
    static var reuseID = "PosterPatchTableViewCell"

    // MARK: - PRIVATE PROPERTY

    private let serviceImage = ImageAPIService()
    private let imageERROR = "error"
    private var posterImage: UIImageView = {
...
